--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Diagramma Università</h1>
+    <h1>Esercizio Diagramma Università</h1>
     <img src="drawSQL-export-2022-06-30_16_37.png" alt="">
     
 </body>
